feat: added image.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,83 @@
     <title>component library</title>
 </head>
 <body>
-    <h1>
-        Usha's Component library
-    </h1>
+    <h1>Usha's Component library</h1>
+    <p>I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
+    <hr>
+
+    <h2>@typography</h2>
+    <h1>This is the biggest heading.</h1>
+    <h2>This is the second biggest heading.</h2>
+    <p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
+    <small>This is relatively smaller text.</small>
+    <hr>
+
+    <h2>@Container</h2>
+    <h3>Fluid container</h3>
+    <div>This is the fluid container. This will go till the end of page</div>
+    <h3>Centered container</h3>
+    <div>This is the centered container. This will go till the specified width.</div>
+    <hr>
+
+    <h2>@Links</h2>
+    <a href="/">primary link</a>
+    <a href="/">secondary link</a>
+    <hr>
+
+    <h2>@Lists</h2>
+    <h3>unordered list</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+    <h3>unordered Inline list</h3>
+    <ul>
+        <li>Inline Item one</li>
+        <li>Inline Item two</li>
+        <li>Inline Item three</li>
+    </ul>
+    <h3>reverse ordered list</h3>
+    <ol>
+        <li>milk</li>
+        <li>egg</li>
+        <li>bread</li>
+    </ol>
+    <hr>
+
+    <h2>@Nav</h2>
+    <div>IamBrand</div>
+    <ul>
+        <li>
+            <a href="/">home</a>
+        </li>
+        <li>
+            <a href="/">projects</a>
+        </li>
+        <li>
+            <a href="/">blog</a>
+        </li>
+    </ul>
+    <hr>
+
+    <h2>@header</h2>
+    <header>
+        <img src="img/headerImg.svg"/>
+        <h1>heading inside header</h1>
+    </header>
+    
+
+
+
+
+
+
+    <div style="height: 50vh"></div>
+
+
+
+
+
     
 </body>
 </html>
