--- a/index.html
+++ b/index.html
@@ -71,7 +71,26 @@
         <img src="img/headerImg.svg"/>
         <h1>heading inside header</h1>
     </header>
-    
+    <hr>
+
+    <h2>@Section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+    <section>
+        <h3>off white section</h3>
+        <p>This will have gray background</p>
+    </section>
+    <hr>
+
+    <h2>@Footer</h2>
+    <div>some small heading inside footer</div>
+    <ul>
+        <li>social one</li>
+        <li>social two</li>
+        <li>social three</li>
+    </ul>
 
 
 
