--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>component library</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Usha's Component library</h1>
-    <p>I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
+    
+</body>
+</html>
+<body>
+    <h1 id="lib-header">Usha's Component library</h1>
+    <p class="para">I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
     <hr>
 
     <h2>@typography</h2>
