--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </body>
 </html>
 <body>
-    <h1 id="lib-header">Usha's Component library</h1>
-    <p class="para">I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
+    <h1>Usha's Component library</h1>
+    <p>I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
     <hr>
 
     <h2>@typography</h2>
@@ -25,9 +25,9 @@
 
     <h2>@Container</h2>
     <h3>Fluid container</h3>
-    <div>This is the fluid container. This will go till the end of page</div>
+    <div class="container">This is the fluid container. This will go till the end of page</div>
     <h3>Centered container</h3>
-    <div>This is the centered container. This will go till the specified width.</div>
+    <div class="container container-center">This is the centered container. This will go till the specified width.</div>
     <hr>
 
     <h2>@Links</h2>
