--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
     <hr>
 
     <h2>@Links</h2>
-    <a href="/">primary link</a>
-    <a href="/">secondary link</a>
+    <a class="link link-primary" href="/">primary link</a>
+    <a class="link link-secondary" href="/">secondary link</a>
     <hr>
 
     <h2>@Lists</h2>
     <h3>unordered list</h3>
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
     </ul>
     <h3>unordered Inline list</h3>
     <ul>
-        <li>Inline Item one</li>
-        <li>Inline Item two</li>
-        <li>Inline Item three</li>
+        <li class="list-item-inline">Inline Item one</li>
+        <li class="list-item-inline">Inline Item two</li>
+        <li class="list-item-inline">Inline Item three</li>
     </ul>
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>egg</li>
         <li>bread</li>
