--- a/index.html
+++ b/index.html
@@ -57,24 +57,26 @@
     <hr>
 
     <h2>@Nav</h2>
-    <div>IamBrand</div>
-    <ul>
-        <li>
-            <a href="/">home</a>
-        </li>
-        <li>
-            <a href="/">projects</a>
-        </li>
-        <li>
-            <a href="/">blog</a>
-        </li>
-    </ul>
+    <nav class="nav container">
+        <div class="nav-brand">IAmBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">blog</a>
+             </li>
+        </ul>
+    </nav>
     <hr>
 
     <h2>@header</h2>
-    <header>
-        <img src="img/headerImg.svg"/>
-        <h1>heading inside header</h1>
+    <header class="hero">
+        <img class="hero-image"src="img/headerImg.svg"/>
+        <h1 class="hero-heading">heading inside header</h1>
     </header>
     <hr>
 
