--- a/index.html
+++ b/index.html
@@ -75,19 +75,23 @@
 
     <h2>@header</h2>
     <header class="hero">
-        <img class="hero-image"src="img/headerImg.svg"/>
-        <h1 class="hero-heading">heading inside header</h1>
+        <img class="hero-image"src="img/hero-img.svg"/>
+        <h1 class="hero-heading">Usha the <span class="heading-inverted">software developer</span></h1>
     </header>
     <hr>
 
     <h2>@Section</h2>
-    <section>
-        <h3>white section</h3>
+    <section class="section">
+        <div class="container container-center">
+        <h1>white section</h1>
         <p>This will have white background</p>
+        </div>
     </section>
-    <section>
-        <h3>off white section</h3>
+    <section class="section section-ow">
+        <div class="container container-center">
+        <h1>off white section</h1>
         <p>This will have gray background</p>
+        </div>
     </section>
     <hr>
 
