--- a/index.html
+++ b/index.html
@@ -96,11 +96,16 @@
     <hr>
 
     <h2>@Footer</h2>
-    <div>some small heading inside footer</div>
+    <footer class="footer">
+    <div class="footer-header">some small heading inside footer</div>
     <ul>
-        <li>social one</li>
-        <li>social two</li>
-        <li>social three</li>
+        <li class="list-item-inline"><a class="link" href="/">socialone</a>
+        </li>
+        <li class="list-item-inline"><a class="link" href="/">socialtwo</a>
+        </li>
+        <li class="list-item-inline"><a class="link" href="/">socialthree</a>
+        </li>
     </ul>
+    </footer>
 </body>
 </html>
