--- a/index.html
+++ b/index.html
@@ -4,108 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>component library</title>
-    <link href="styles.css" rel="stylesheet">
+    <title>home | Usha</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    
-</body>
-</html>
-<body>
-    <h1>Usha's Component library</h1>
-    <p>I am attending neog camp and I want to make a library which would make all my project looks good and consistent.</p>
-    <hr>
-
-    <h2>@typography</h2>
-    <h1>This is the biggest heading.</h1>
-    <h2>This is the second biggest heading.</h2>
-    <p>Let me show you the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
-    <small>This is relatively smaller text.</small>
-    <hr>
-
-    <h2>@Container</h2>
-    <h3>Fluid container</h3>
-    <div class="container">This is the fluid container. This will go till the end of page</div>
-    <h3>Centered container</h3>
-    <div class="container container-center">This is the centered container. This will go till the specified width.</div>
-    <hr>
-
-    <h2>@Links</h2>
-    <a class="link link-primary" href="/">primary link</a>
-    <a class="link link-secondary" href="/">secondary link</a>
-    <hr>
-
-    <h2>@Lists</h2>
-    <h3>unordered list</h3>
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </ul>
-    <h3>unordered Inline list</h3>
-    <ul>
-        <li class="list-item-inline">Inline Item one</li>
-        <li class="list-item-inline">Inline Item two</li>
-        <li class="list-item-inline">Inline Item three</li>
-    </ul>
-    <h3>reverse ordered list</h3>
-    <ol reversed>
-        <li>milk</li>
-        <li>egg</li>
-        <li>bread</li>
-    </ol>
-    <hr>
-
-    <h2>@Nav</h2>
     <nav class="nav container">
-        <div class="nav-brand">IAmBrand</div>
+        <div class="nav-brand">IAmDeveloper</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link" href="/">home</a>
+                <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">blog</a>
+                <a class="link" href="/blogs.html">Blogs</a>
              </li>
         </ul>
     </nav>
-    <hr>
 
-    <h2>@header</h2>
     <header class="hero">
-        <img class="hero-image"src="img/hero-img.svg"/>
+        <img class="hero-image"src="/img/hero-img.svg"/>
         <h1 class="hero-heading">Usha the <span class="heading-inverted">software developer</span></h1>
     </header>
-    <hr>
 
-    <h2>@Section</h2>
-    <section class="section">
-        <div class="container container-center">
-        <h1>white section</h1>
-        <p>This will have white background</p>
-        </div>
-    </section>
     <section class="section section-ow">
         <div class="container container-center">
-        <h1>off white section</h1>
-        <p>This will have gray background</p>
+            <h1>Technologies</h1>
+            <p>I am good at HTML5, CSS3, Git, Javascript, Finaclescript, SQL/PLSQL, Shellscript and learning Node.js, React.js and web hosting.</p>
         </div>
     </section>
-    <hr>
 
-    <h2>@Footer</h2>
+    <section class="section">
+        <div class="container container-center">
+        <h1>Projects</h1>
+        <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+        <a class="link link-primary" href="/projects.html">See projects</a>
+        </div>
+    </section>
+
+    <section class="section section-ow">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>I am also working on some technical and non-technical blogs. I like to document my journey of learning.</p>
+            <a class="link link-secondary" href="/blogs.html">Read blogs</a>
+        </div>
+    </section>
+
     <footer class="footer">
-    <div class="footer-header">some small heading inside footer</div>
-    <ul>
-        <li class="list-item-inline"><a class="link" href="/">socialone</a>
-        </li>
-        <li class="list-item-inline"><a class="link" href="/">socialtwo</a>
-        </li>
-        <li class="list-item-inline"><a class="link" href="/">socialthree</a>
-        </li>
-    </ul>
-    </footer>
+        <div class="footer-header">Social media presence</div>
+        <ul>
+            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
+            </li>
+        </ul>
+        </footer>
 </body>
 </html>
