done with major changes

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 
     <ul class="list-non-bullet">
         <li>
-            <div class="container container-center">
+            <div class="list-showcase container container-center">
                 <h1>RCB Fan?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
@@ -38,7 +38,7 @@
             </div>    
         </li>
         <li>
-            <div class="container container-center">
+            <div class="list-showcase container container-center">
                 <h1>How well do you know me?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
@@ -47,5 +47,18 @@
             </div> 
         </li>
     </ul>
+    <footer class="footer">
+        <div class="footer-header">Social media presence</div>
+        <ul>
+            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
+            </li>
+        </ul>
+        </footer>
 </body>
 </html>
