--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,20 @@
         </ul>
     </nav>
     <header class="hero">
-        <h1 class="hero-heading">my <span class="heading-inverted">blogs</span></h1>
+        <h1 class="hero-heading">Read my <span class="heading-inverted">blogs</span></h1>
     </header>
+    <footer class="footer">
+        <div class="footer-header">Social media presence</div>
+        <ul>
+            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
+            </li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
+            </li>
+        </ul>
+        </footer>
 </body>
 </html>
