--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | Usha</title>
+    <title>home | usha</title>
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
@@ -63,6 +63,6 @@
             <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
             </li>
         </ul>
-        </footer>
+    </footer>
 </body>
 </html>
