feat:added minions translator to project

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,16 @@
     <ul class="list-non-bullet">
         <li>
             <div class="list-showcase container container-center">
-                <h1>RCB Fan?</h1>
+                <h1>Minionese</h1>
+                <small>August,2021</small>
+                <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+                <a class="link link-primary" href="https://minions-mathugalu.netlify.app/">Play Quiz</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/banana-translator">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
+                <h1>Are you a RCB Fan?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
                 <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2#index.js">Play Quiz</a>
