added yoda speaks

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,16 @@
                 <h1>Minionese</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
-                <a class="link link-primary" href="https://minions-mathugalu.netlify.app/">Play Quiz</a>
+                <a class="link link-primary" href="https://speaks-yoda.netlify.app//">Try this</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/yoda-speaks">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
+                <h1>Minionese</h1>
+                <small>August,2021</small>
+                <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+                <a class="link link-primary" href="https://minions-mathugalu.netlify.app/"></a>click here
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/banana-translator">View source</a>
             </div>    
         </li>
