--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <div class="list-showcase container container-center">
                 <h1>Yoda speak</h1>
                 <small>August,2021</small>
-                <p>Are you a fan of Yoda? Use the translator to convert your text from English to Yoda speak.</p>
+                <p>Are you a fan of <strong>Yoda</strong>? Use the translator to convert your text from English to Yoda speak.</p>
                 <a class="link link-primary" href="https://speaks-yoda.netlify.app//">Try this</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/yoda-speaks">View source</a>
             </div>    
@@ -41,7 +41,7 @@
             <div class="list-showcase container container-center">
                 <h1>Minionese</h1>
                 <small>August,2021</small>
-                <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+                <p>Are you a fan of <strong>minions</strong>? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
                 <a class="link link-primary" href="https://minions-mathugalu.netlify.app/">click here</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/banana-translator">View source</a>
             </div>    
