--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,15 @@
     <ul class="list-non-bullet">
         <li>
             <div class="list-showcase container container-center">
+                <h1>Emoji intrepreter</h1>
+                <small>August,2021</small>
+                <p>Are you strugling to find <strong>Emoji </strong>meanings? Click on or enter emoji and know what it means.</p>
+                <a class="link link-primary" href="https://nyqg3.csb.app/">Try this</a>
+                <a class="link link-secondary" href="https://codesandbox.io/s/emojiinterpreter-in-two-ways-nyqg3?file=/src/App.js">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
                 <h1>Yoda speak</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of <strong>Yoda</strong>? Use the translator to convert your text from English to Yoda speak.</p>
