Modified Good songs project

--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,10 @@
                 <h1>Good Songs</h1>
                 <small>August,2021</small>
                 <p>Checkout my favorite songs.</p>
-                <a class="link link-primary" href="https://sxigc.csb.app/">Try this</a>
-                <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolisten-sxigc?file=/src/App.js">View source</a>
+                <!-- <a class="link link-primary" href="https://sxigc.csb.app/">Try this</a> https://wg3dh.csb.app/-->
+                <!-- <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolisten-sxigc?file=/src/App.js">View source</a> -->
+                <a class="link link-primary" href="https://wg3dh.csb.app/">Try this</a>
+                <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolistenmobile-wg3dh?file=/src/App.js">View source</a>
             </div>    
         </li>
         <li>
