Added Cash register

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,17 @@
     <ul class="list-non-bullet">
         <li>
             <div class="list-showcase container container-center">
+                <h1>Cash Register Manager</h1>
+                <small>August,2021</small>
+                <p>Are you struggling to calculate how much amount have to return back to your Customer?This Cash Register manager might make your life easy.</p>
+                <!-- <a class="link link-primary" href="https://sxigc.csb.app/">Try this</a> https://wg3dh.csb.app/-->
+                <!-- <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolisten-sxigc?file=/src/App.js">View source</a> -->
+                <a class="link link-primary" href="https://changeamtcalculator.netlify.app/">Try this</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/cash-register-manager">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
                 <h1>Good Songs</h1>
                 <small>August,2021</small>
                 <p>Checkout my favorite songs.</p>
