Added Fun with Triangle

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,15 @@
     <ul class="list-non-bullet">
         <li>
             <div class="list-showcase container container-center">
+                <h1>Fun with Triangle!</h1>
+                <small>August,2021</small>
+                <p>A fun game to play around Triangle.</p>
+                <a class="link link-primary" href="https://funwithtri-angle.netlify.app/">Try this</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/fun-with-triangles">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
                 <h1>Is your birthday lucky?</h1>
                 <small>August,2021</small>
                 <p>Do you wanna know is your birthday lucky?Checkout here.</p>
