--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <div class="list-showcase container container-center">
                 <h1>Palindrome birthday!</h1>
                 <small>September,2021</small>
-                <p>Is your birthday Palindrome? Or check you missed it by how many days.</p>
+                <p>Is your birthday Palindrome? Or check, you missed it by how many days.</p>
                 <a class="link link-primary" href="https://palindromeb-day.netlify.app/">Try this</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/palindrome-birthday">View source</a>
             </div>    
