added stock profit and loss calculator

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,15 @@
     <ul class="list-non-bullet">
         <li>
             <div class="list-showcase container container-center">
+                <h1>Stock profit and loss calculator.</h1>
+                <small>September,2021</small>
+                <p>Calculator to calculate profit and loss of Stocks.</p>
+                <a class="link link-primary" href="https://stockprofit-losscalculator.netlify.app/">Try this</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a>
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
                 <h1>Palindrome birthday!</h1>
                 <small>September,2021</small>
                 <p>Is your birthday Palindrome? Or check, you missed it by how many days.</p>
