--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <div class="list-showcase container container-center">
                 <h1>Stock profit and loss calculator.</h1>
                 <small>September,2021</small>
-                <p>Calculator to calculate profit and loss of Stocks.</p>
+                <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
                 <a class="link link-primary" href="https://stockprofit-losscalculator.netlify.app/">Try this</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a>
             </div>    
@@ -116,7 +116,7 @@
                 <h1>Are you a RCB Fan?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2#index.js">Play Quiz</a>
+                <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2?embed=true#index.js">Play Quiz</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/week1Assignment2">View source</a>
             </div>    
         </li>
@@ -125,7 +125,7 @@
                 <h1>How well do you know me?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://replit.com/@UshaGururaj/W01ex13#index.js">Play Quiz</a>
+                <a class="link link-primary" href="https://replit.com/@UshaGururaj/W01ex13?embed=true#index.js">Play Quiz</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/Week1-liveQuiz">View source</a>
             </div> 
         </li>
