--- a/blogs.html
+++ b/blogs.html
@@ -25,6 +25,19 @@
     <header class="hero">
         <h1 class="hero-heading">Read my <span class="heading-inverted">blogs</span></h1>
     </header>
+
+    <ul class="list-non-bullet">
+        <li>
+            <div class="list-showcase container container-center">
+                <h1>HTTP response status codes.</h1>
+                <small>September,2021</small>
+                <p>A blog which helps readers to get some more details about HTTP response status codes.</p>
+                <a class="link link-primary" href="/httpBlog.html">Read me </a>
+                <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
+            </div>    
+        </li>
+    </ul>
+
     <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <ul>
@@ -37,6 +50,6 @@
             <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
             </li>
         </ul>
-        </footer>
+    </footer>
 </body>
 </html>
