--- a/httpBlog.html
+++ b/httpBlog.html
@@ -46,7 +46,7 @@
             </ol>
             <p><strong>Note :</strong> If you receive other than these response status, that is possibly custom to the server's software and it is a non-standard response.</p>
             <p>A very famous and well known HTTP response status code is 404. It indicates that the server cannot find the requested source in the browser, this means the URL entered is not a valid one. In an API, this means the end point is valid but the source doesn't exist.</p>
-            <p><strong>For more information visit<a class="link" href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Status">HTTP response status codes - HTTP | MDN</a></strong></p>
+            <p><strong>For more information visit:<a class="link" href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Status">HTTP response status codes - HTTP | MDN</a></strong></p>
         </div>
     </section>
 
