--- a/httpBlog.html
+++ b/httpBlog.html
@@ -33,6 +33,7 @@
         <div class="container container-center">
             <!-- <h1>Technologies</h1> -->
             <small>September,2021</small>
+            <p>Sometimes, when we try to access any website or enter any url we will get 404 - page not found error. You know why we get like that and what it means? here we learn about those HTTP response status codes.</p>
             <p>HTTP response status codes are issued by a server in response to a client's request made to the server and it indicates whether a http request which is sent by the client is successfully completed. The Internet Assigned Numbers Authority (IANA) maintains the official registry of HTTP status codes.</p>
             <!-- <br/> -->
             <p>All HTTP response status codes are classified into 5 different types.The first digit of the status code defines the class of response and last two digits do not have any specific role here.</p>
