--- a/blogs.html
+++ b/blogs.html
@@ -38,7 +38,7 @@
         </li>
         <li>
             <div class="list-showcase container container-center">
-                <h1>Jokes</h1>
+                <h1>Dev Jokes</h1>
                 <small>September,2021</small>
                 <p>A blog which contains bunch of jokes. If you want to contribute send me jokes I will update here.Let's laugh :)</p>
                 <a class="link link-primary" href="/jokesblog.html">Read me </a>
