--- a/blogs.html
+++ b/blogs.html
@@ -40,8 +40,17 @@
             <div class="list-showcase container container-center">
                 <h1>Dev Jokes</h1>
                 <small>September,2021</small>
-                <p>A blog which contains bunch of jokes. If you want to contribute send me jokes I will update here.Let's laugh :)</p>
+                <p>A blog which contains bunch of jokes. If you want to contribute send me jokes I will update here. Let's laugh :)</p>
                 <a class="link link-primary" href="/jokesblog.html">Read me </a>
+                <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
+            </div>    
+        </li>
+        <li>
+            <div class="list-showcase container container-center">
+                <h1>Eloquent Javascript Summary</h1>
+                <small>September,2021</small>
+                <p>This blog contains the summary of Eloquent Javascript book (Eloquent Javascript in my words).</p>
+                <a class="link link-primary" href="/eloquentJavascriptSummary.html">Read me </a>
                 <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
             </div>    
         </li>
