--- a/eloquentJavascriptSummary.html
+++ b/eloquentJavascriptSummary.html
@@ -29,10 +29,25 @@
     </header>
 
     <section class="section">
-        <div class="container container-center">
+        <div class="container container-center container-blog">
             <small>September,2021</small>
-            
-        </div>
+            <h3>"Code is the text that makes up programs"</h3> 
+            <p>Elaquent Javascript: A modern Introduction to Javascript. This book is written by Marijn Haverbeke. I am referring 3rd edition to write this blog. I hope this blog help us to recollect things easily and it helps me to document my learning journey.</p>  
+            <h2>Values, Types and Operators</h2>
+            <p><strong>Values :</strong> In Javascript, chunks of bits which represent pieces of information are called values.</p>
+            <p><strong>Types :</strong> Values are madeup of bits and each value plays different role. This role is determined by the value type.</p>
+            <p>Ex: Number, Text / String, Function.</p>
+            <p>To create a value, we must name it ans these value has to be stored some where. It will store with that name.</p>
+            <h3>Basic Data types</h3>  
+            <ol>
+                <li><strong>Number : </strong>It contains integer, float numeric values. </li>
+                <p>Ex : 57, -21, 20.34..</p>
+                <li><strong>String : </strong>Strings are used to represent text or group of characters. Strings always enclosed within quotes.</li>
+                <p>Ex : `Down on the sea`, "Lie on the ocean", 'Float on the ocean'..</p>
+                <p>We can use single quote, double quote or backtick to represent strings, but both start and end quotes should match.</p>
+            </ol>     
+            <p>Backslash(\) is called as escaping character. The character after backslah will has a special meaning. A quote preceded by a backslash will not end the string but it will be part of it.</p>
+         </div>
     </section>
 
     <footer class="footer">
