--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,10 @@
         <h1 class="hero-heading">See my<span class="heading-inverted"> code</span></h1>
     </header>
 
+    <div class="container-center">
     <ul class="list-non-bullet">
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Stock profit and loss calculator.</h1>
                 <small>September,2021</small>
                 <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
@@ -38,7 +39,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Palindrome birthday!</h1>
                 <small>September,2021</small>
                 <p>Is your birthday Palindrome? Or check, you missed it by how many days.</p>
@@ -47,7 +48,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Fun with Triangle!</h1>
                 <small>August,2021</small>
                 <p>A fun game to play around Triangle.</p>
@@ -56,7 +57,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Is your birthday lucky?</h1>
                 <small>August,2021</small>
                 <p>Do you wanna know is your birthday lucky?Checkout here.</p>
@@ -65,7 +66,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Cash Register Manager</h1>
                 <small>August,2021</small>
                 <p>Are you struggling to calculate how much amount have to return back to your Customer?This Cash Register manager might make your life easy.</p>
@@ -74,7 +75,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Good Songs</h1>
                 <small>August,2021</small>
                 <p>Checkout my favorite songs.</p>
@@ -85,7 +86,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Emoji intrepreter</h1>
                 <small>August,2021</small>
                 <p>Are you strugling to find <strong>Emoji </strong>meanings? Click on or enter emoji and know what it means.</p>
@@ -94,7 +95,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Yoda speak</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of <strong>Yoda</strong>? Use the translator to convert your text from English to Yoda speak.</p>
@@ -103,7 +104,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Minionese</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of <strong>minions</strong>? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
@@ -112,7 +113,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>Are you a RCB Fan?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
@@ -121,7 +122,7 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <div class="list-showcase container-card">
                 <h1>How well do you know me?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
@@ -130,6 +131,7 @@
             </div> 
         </li>
     </ul>
+    </div>
     <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <ul>
