--- a/blogs.html
+++ b/blogs.html
@@ -25,10 +25,11 @@
     <header class="hero">
         <h1 class="hero-heading">Read my <span class="heading-inverted">blogs</span></h1>
     </header>
-
+    <div class= "container container-center" >
     <ul class="list-non-bullet">
         <li>
-            <div class="list-showcase container container-center">
+            <!-- <div class="list-showcase container container-center container-card"> -->
+            <div class="list-showcase container-card">
                 <h1>HTTP response status codes.</h1>
                 <small>September,2021</small>
                 <p>A blog which helps readers to get some more details about HTTP response status codes.</p>
@@ -37,7 +38,8 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <!-- <div class="list-showcase container container-center container-card"> -->
+            <div class="list-showcase container-card">
                 <h1>Dev Jokes</h1>
                 <small>September,2021</small>
                 <p>A blog which contains bunch of jokes. If you want to contribute send me jokes I will update here. Let's laugh :)</p>
@@ -46,7 +48,8 @@
             </div>    
         </li>
         <li>
-            <div class="list-showcase container container-center">
+            <!-- <div class="list-showcase container container-center container-card"> -->
+            <div class="list-showcase container-card">
                 <h1>Eloquent Javascript Summary</h1>
                 <small>September,2021</small>
                 <p>This blog contains the summary of Eloquent Javascript book (Eloquent Javascript in my words).</p>
@@ -55,7 +58,7 @@
             </div>    
         </li>
     </ul>
-
+    </div>
     <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <ul>
