--- a/blogs.html
+++ b/blogs.html
@@ -33,7 +33,8 @@
                 <h1>HTTP response status codes.</h1>
                 <small>September,2021</small>
                 <p>A blog which helps readers to get some more details about HTTP response status codes.</p>
-                <a class="link link-primary" href="/httpBlog.html">Read me </a>
+                <!-- <a class="link link-primary" href="/httpBlog.html">Read me </a> -->
+                <a class="link link-primary" href="https://medium.com/@usha.neogrammer/http-response-status-codes-5d4a10f7ecc5">Read me</a>
                 <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
             </div>    
         </li>
