--- a/blogs.html
+++ b/blogs.html
@@ -41,6 +41,17 @@
         <li>
             <!-- <div class="list-showcase container container-center container-card"> -->
             <div class="list-showcase container-card">
+                <h1>Browser's Console makes web developer life easier! How?!</h1>
+                <small>September,2021</small>
+                <p>A blog about some debugging tips and tricks. By knowing these we can make our lives as developers a little bit easier just by adapting new small habits.</p>
+                <!-- <a class="link link-primary" href="/httpBlog.html">Read me </a> -->
+                <a class="link link-primary" href="https://medium.com/@usha.neogrammer/browsers-console-makes-web-developer-life-easier-how-f026f34f1435">Read me</a>
+                <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
+            </div>    
+        </li>
+        <li>
+            <!-- <div class="list-showcase container container-center container-card"> -->
+            <div class="list-showcase container-card">
                 <h1>Dev Jokes</h1>
                 <small>September,2021</small>
                 <p>A blog which contains bunch of jokes. If you want to contribute send me jokes I will update here. Let's laugh :)</p>
@@ -54,6 +65,7 @@
                 <h1>Eloquent Javascript Summary</h1>
                 <small>September,2021</small>
                 <p>This blog contains the summary of Eloquent Javascript book (Eloquent Javascript in my words).</p>
+                <p>To be continued..</p>
                 <a class="link link-primary" href="/eloquentJavascriptSummary.html">Read me </a>
                 <!-- <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a> -->
             </div>    
