fix  : added social media icons

--- a/index.html
+++ b/index.html
@@ -50,8 +50,40 @@
             <a class="link link-secondary" href="/blogs.html">Read blogs</a>
         </div>
     </section>
-
     <footer class="footer">
+        <!-- <p>©  |  2021  |  Usha BG</p> -->
+        <!-- <p>get in touch</p> -->
+        <div class="footer-header" style="margin-bottom:2rem">Get in touch</div>
+        <!-- <ul class="list-unordered inline-list"> -->
+          <ul class="list-non-bullet" style="margin-bottom:2rem">
+          <li class="list-item-inline">
+            <a class="links" href="https://www.linkedin.com/in/usha-bg-002734192" target="blank">
+              <img src="img/linkedin.svg" alt="linkedin" class="footer-icon" />
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://github.com/UshaGururaj" target="blank">
+              <img src="img/git.svg" alt="github" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://twitter.com/UshaBG1" target="blank">
+              <img src="img/tweet.svg" alt="twitter" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a
+              class="links"
+              href="https://instagram.com/usha_g_raj"
+              target="blank"
+            >
+              <img src="img/insta.svg" alt="instagram" class="footer-icon"/>
+            </a>
+          </li>
+        </ul>
+</footer>
+
+    <!-- <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <ul>
             <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
@@ -63,6 +95,6 @@
             <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
             </li>
         </ul>
-    </footer>
+    </footer> -->
 </body>
 </html>
