--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <h1>Stock profit and loss calculator.</h1>
                 <small>September,2021</small>
                 <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
-                <a class="link link-primary" href="https://stockprofit-losscalculator.netlify.app/">Try this</a>
+                <a class="link link-primary" href="https://stockprofit-losscalculator.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/stock-profit-loss">View source</a>
             </div>    
         </li>
@@ -43,7 +43,7 @@
                 <h1>Palindrome birthday!</h1>
                 <small>September,2021</small>
                 <p>Is your birthday Palindrome? Or check, you missed it by how many days.</p>
-                <a class="link link-primary" href="https://palindromeb-day.netlify.app/">Try this</a>
+                <a class="link link-primary" href="https://palindromeb-day.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/palindrome-birthday">View source</a>
             </div>    
         </li>
@@ -52,7 +52,7 @@
                 <h1>Fun with Triangle!</h1>
                 <small>August,2021</small>
                 <p>A fun game to play around Triangle.</p>
-                <a class="link link-primary" href="https://funwithtri-angle.netlify.app/">Try this</a>
+                <a class="link link-primary" href="https://funwithtri-angle.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/fun-with-triangles">View source</a>
             </div>    
         </li>
@@ -61,7 +61,7 @@
                 <h1>Is your birthday lucky?</h1>
                 <small>August,2021</small>
                 <p>Do you wanna know is your birthday lucky?Checkout here.</p>
-                <a class="link link-primary" href="https://checkbirthdayisluckyornot.netlify.app/">Try this</a>
+                <a class="link link-primary" href="https://checkbirthdayisluckyornot.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/is-your-birthday-lucky">View source</a>
             </div>    
         </li>
@@ -70,7 +70,7 @@
                 <h1>Cash Register Manager</h1>
                 <small>August,2021</small>
                 <p>Are you struggling to calculate how much amount have to return back to your Customer?This Cash Register manager might make your life easy.</p>
-                <a class="link link-primary" href="https://changeamtcalculator.netlify.app/">Try this</a>
+                <a class="link link-primary" href="https://changeamtcalculator.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/cash-register-manager">View source</a>
             </div>    
         </li>
@@ -81,7 +81,7 @@
                 <p>Checkout my favorite songs.</p>
                 <!-- <a class="link link-primary" href="https://sxigc.csb.app/">Try this</a> https://wg3dh.csb.app/-->
                 <!-- <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolisten-sxigc?file=/src/App.js">View source</a> -->
-                <a class="link link-primary" href="https://wg3dh.csb.app/">Try this</a>
+                <a class="link link-primary" href="https://wg3dh.csb.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolistenmobile-wg3dh?file=/src/App.js">View source</a>
             </div>    
         </li>
@@ -90,7 +90,7 @@
                 <h1>Emoji intrepreter</h1>
                 <small>August,2021</small>
                 <p>Are you strugling to find <strong>Emoji </strong>meanings? Click on or enter emoji and know what it means.</p>
-                <a class="link link-primary" href="https://nyqg3.csb.app/">Try this</a>
+                <a class="link link-primary" href="https://nyqg3.csb.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://codesandbox.io/s/emojiinterpreter-in-two-ways-nyqg3?file=/src/App.js">View source</a>
             </div>    
         </li>
@@ -99,7 +99,7 @@
                 <h1>Yoda speak</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of <strong>Yoda</strong>? Use the translator to convert your text from English to Yoda speak.</p>
-                <a class="link link-primary" href="https://speaks-yoda.netlify.app//">Try this</a>
+                <a class="link link-primary" href="https://speaks-yoda.netlify.app//">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/yoda-speaks">View source</a>
             </div>    
         </li>
@@ -108,7 +108,7 @@
                 <h1>Minionese</h1>
                 <small>August,2021</small>
                 <p>Are you a fan of <strong>minions</strong>? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
-                <a class="link link-primary" href="https://minions-mathugalu.netlify.app/">click here</a>
+                <a class="link link-primary" href="https://minions-mathugalu.netlify.app/">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/banana-translator">View source</a>
             </div>    
         </li>
@@ -117,7 +117,7 @@
                 <h1>Are you a RCB Fan?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2?embed=true#index.js">Play Quiz</a>
+                <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2?embed=true#index.js">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/week1Assignment2">View source</a>
             </div>    
         </li>
@@ -126,24 +126,43 @@
                 <h1>How well do you know me?</h1>
                 <small>August,2021</small>
                 <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://replit.com/@UshaGururaj/W01ex13?embed=true#index.js">Play Quiz</a>
+                <a class="link link-primary" href="https://replit.com/@UshaGururaj/W01ex13?embed=true#index.js">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/Week1-liveQuiz">View source</a>
             </div> 
         </li>
     </ul>
     </div>
     <footer class="footer">
-        <div class="footer-header">Social media presence</div>
-        <ul>
-            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
-            </li>
+        <!-- <p>©  |  2021  |  Usha BG</p> -->
+        <!-- <p>get in touch</p> -->
+        <div class="footer-header" style="margin-bottom:2rem">Get in touch</div>
+        <!-- <ul class="list-unordered inline-list"> -->
+          <ul class="list-non-bullet" style="margin-bottom:2rem">
+          <li class="list-item-inline">
+            <a class="links" href="https://www.linkedin.com/in/usha-bg-002734192" target="blank">
+              <img src="img/linkedin.svg" alt="linkedin" class="footer-icon" />
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://github.com/UshaGururaj" target="blank">
+              <img src="img/git.svg" alt="github" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://twitter.com/UshaBG1" target="blank">
+              <img src="img/tweet.svg" alt="twitter" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a
+              class="links"
+              href="https://instagram.com/usha_g_raj"
+              target="blank"
+            >
+              <img src="img/insta.svg" alt="instagram" class="footer-icon"/>
+            </a>
+          </li>
         </ul>
-        </footer>
+</footer>
 </body>
 </html>
