--- a/blogs.html
+++ b/blogs.html
@@ -73,17 +73,36 @@
     </ul>
     </div>
     <footer class="footer">
-        <div class="footer-header">Social media presence</div>
-        <ul>
-            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
-            </li>
+        <!-- <p>©  |  2021  |  Usha BG</p> -->
+        <!-- <p>get in touch</p> -->
+        <div class="footer-header" style="margin-bottom:2rem">Get in touch</div>
+        <!-- <ul class="list-unordered inline-list"> -->
+          <ul class="list-non-bullet" style="margin-bottom:2rem">
+          <li class="list-item-inline">
+            <a class="links" href="https://www.linkedin.com/in/usha-bg-002734192" target="blank">
+              <img src="img/linkedin.svg" alt="linkedin" class="footer-icon" />
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://github.com/UshaGururaj" target="blank">
+              <img src="img/git.svg" alt="github" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="links" href="https://twitter.com/UshaBG1" target="blank">
+              <img src="img/tweet.svg" alt="twitter" class="footer-icon"/>
+            </a>
+          </li>
+          <li class="list-item-inline">
+            <a
+              class="links"
+              href="https://instagram.com/usha_g_raj"
+              target="blank"
+            >
+              <img src="img/insta.svg" alt="instagram" class="footer-icon"/>
+            </a>
+          </li>
         </ul>
-    </footer>
+</footer>
 </body>
 </html>
