fix : nav header position

--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <nav class="nav container">
-        <div class="nav-brand">IAmDeveloper</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">Home</a>
@@ -21,6 +20,7 @@
                 <a class="link link-active" href="/blogs.html">Blogs</a>
              </li>
         </ul>
+        <div class="nav-brand">Usha Gururaj</div>
     </nav>
     <header class="hero">
         <h1 class="hero-heading">Read my <span class="heading-inverted">blogs</span></h1>
