--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <nav class="nav container">
-        <div class="nav-brand">IAmDeveloper</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">Home</a>
@@ -21,6 +20,7 @@
                 <a class="link" href="/blogs.html">Blogs</a>
              </li>
         </ul>
+        <div class="nav-brand">Usha Gururaj</div>
     </nav>
 
     <header class="hero">
@@ -82,19 +82,5 @@
           </li>
         </ul>
 </footer>
-
-    <!-- <footer class="footer">
-        <div class="footer-header">Social media presence</div>
-        <ul>
-            <li class="list-item-inline"><a class="link" href="https://github.com/UshaGururaj">Github</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/usha-bg-002734192">LinkedIn</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/usha_g_raj">Instagram</a>
-            </li>
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/UshaBG1">Twitter</a>
-            </li>
-        </ul>
-    </footer> -->
 </body>
 </html>
