--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="section section-ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I am good at HTML5, CSS3, Git, Javascript, Finaclescript, SQL/PLSQL, Shellscript and learning Node.js, React.js and web hosting.</p>
+            <p>I am familiar at HTML5, CSS3, Git, Javascript, web hosting, Finacle scripting, SQL/PLSQL, Shellscript.</p>
         </div>
     </section>
 
@@ -46,7 +46,7 @@
     <section class="section section-ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p>I am also working on some technical and non-technical blogs. I like to document my journey of learning.</p>
+            <p>I am working on technical and non-technical blogs. I like to document my journey of learning.</p>
             <a class="link link-secondary" href="/blogs.html">Read blogs</a>
         </div>
     </section>
